[package]
name = "regex_engine"
version = "0.1.0"
authors = ["wzv5 <wzv5@msn.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "regex_engine"
crate-type = ["staticlib"]

[dependencies]
regex-syntax = "0.6"
regex = "1.5"
anyhow = "1.0"
cxx = "1.0"

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
