[package]
name = "regex_engine"
version = "0.1.0"
authors = ["wzv5 <wzv5@msn.com>"]
edition = "2021"

[lib]
crate-type = ["staticlib"]

[dependencies]
regex-syntax = "0.8.2"
regex = "1.10.2"
anyhow = "1.0.75"
cxx = { version = "1.0.110", features = ["c++20"] }

[build-dependencies]
cxx-build = "1.0.110"
